# crypto-ledger-tools

./: .gitignore  CONTRIBUTING.md  INTERNAL_MANAGEMENT_MDA.md  LICENSE  OSS_PUBLICATION_REVIEW.md  PROGRAM_ASSET_LEDGER.md  README.en.md  README.ja.md  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: csv_template_handling.md  data_format.md  disclaimer.md  github_release_setup.md  ja_overview.md  ja_quickstart.md  japan_roadmap.md  source_material_review.md  usage.md
examples/: sample_coincheck_trade_history.csv  sample_daily_rates.csv  sample_transactions.csv
src/crypto_ledger_tools/: __init__.py  calculator.py  cli.py  exchange_adapters.py  exchange_templates.py  io.py  jpy.py  models.py  rates.py  report.py
tests/: test_calculator.py  test_cli.py  test_exchange_adapters.py  test_exchange_templates.py  test_jpy.py
